; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_object.c_ipc_object_copyin_type.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_object.c_ipc_object_copyin_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MACH_MSG_TYPE_PORT_RECEIVE = common dso_local global i32 0, align 4
@MACH_MSG_TYPE_PORT_SEND_ONCE = common dso_local global i32 0, align 4
@MACH_MSG_TYPE_PORT_SEND = common dso_local global i32 0, align 4
@MACH_MSG_TYPE_PORT_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ipc_object_copyin_type(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %12 [
    i32 130, label %5
    i32 128, label %7
    i32 131, label %7
    i32 129, label %9
    i32 132, label %9
    i32 136, label %9
    i32 135, label %11
    i32 134, label %11
    i32 133, label %11
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @MACH_MSG_TYPE_PORT_RECEIVE, align 4
  store i32 %6, i32* %2, align 4
  br label %14

7:                                                ; preds = %1, %1
  %8 = load i32, i32* @MACH_MSG_TYPE_PORT_SEND_ONCE, align 4
  store i32 %8, i32* %2, align 4
  br label %14

9:                                                ; preds = %1, %1, %1
  %10 = load i32, i32* @MACH_MSG_TYPE_PORT_SEND, align 4
  store i32 %10, i32* %2, align 4
  br label %14

11:                                               ; preds = %1, %1, %1
  br label %12

12:                                               ; preds = %1, %11
  %13 = load i32, i32* @MACH_MSG_TYPE_PORT_NONE, align 4
  store i32 %13, i32* %2, align 4
  br label %14

14:                                               ; preds = %12, %9, %7, %5
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
